# empi_agent

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json
assets/templates/: empi_schema.json
assets/test_texts/: llama_dialog_history.json
integrations/: config.toml  example_output.json  example_usage.py  requirements.txt  sample_text.txt  test_analyzer.py  text_analyzer.py
src/agents/: FeedbackAgent.cpp  FeedbackAgent.hpp  FeedbackAnalyzer.cpp  InterfaceGenerator.cpp  InterfaceGenerator.hpp  TextAnalyzer.cpp  TextAnalyzer.hpp  orchestrate_agents.cpp
src/core/: UniversalAgent.cpp  UniversalAgent.hpp
tests/: dialogs.json  test_accesibility.js  test_default.cpp  test_orchestration.cpp  test_text_analyzer.cpp  texts.json
tests/output_demo/: test_output.txt
tests/output_examples/: no_agent.html  template_0001_0000.html  template_0001_0001.html
tools/: dialog_recorder.cpp
